--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="delay_time; URL=https://1pangeran505.com/" />
+<meta http-equiv="Refresh" content="0; url='https://1pangeran505.com/'" />
