--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://hanwd.site/?ref=waru88'" />
+<meta http-equiv="Refresh" content="0; url='https://ligavegas.fun/?ref=gamer1adm'" />
