--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://ligavegas.fun/?ref=gamer1adm'" />
+<meta http-equiv="Refresh" content="0; url='http://ligavegas.fun/?ref=pisang123'" />
