--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://fb.com'" />
+<meta http-equiv="Refresh" content="0; url='https://jali.me/Akun-ThaiLand'" />
