--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://www.atok4d.xyz/'" />
+<meta http-equiv="Refresh" content="0; url='https://www.google.com/'" />
